# flair

./: .gitattributes  .gitignore  Cargo.toml  README.md  license
examples/: determinism.rs  forecast_validation.rs  integration_tests.rs  japan_demand_forecast.rs  verify.rs  world_bank_forecast.rs
examples/dataset/: elec_per_capita.csv  japan_demand_unit.csv  noaa_temp_annual.csv  noaa_temp_monthly.csv  world_bank.csv
examples/test_data/world_bank_electricity/: API_EG.USE.ELEC.KH.PC_DS2_en_csv_v2_258.csv
src/: flair.rs  lib.rs  svd.rs
testdata/: japan_electricity_demand.csv
